--- a/RPDGenerator.csproj
+++ b/RPDGenerator.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DocAttributes.cs" />
+    <Compile Include="Data\EducationType.cs" />
     <Compile Include="ExcelReader\ExcelReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="WordGenerator\WordGenerator.cs" />
