Add Education factories

--- a/RPDGenerator.csproj
+++ b/RPDGenerator.csproj
@@ -82,7 +82,8 @@
   <ItemGroup>
     <Compile Include="Data\Discipline.cs" />
     <Compile Include="Data\DocAttributes.cs" />
-    <Compile Include="Data\EducationType.cs" />
+    <Compile Include="Data\EducationLevelFactory.cs" />
+    <Compile Include="Data\EducationTypeFactory.cs" />
     <Compile Include="ExcelReader\ExcelReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="WordGenerator\WordGenerator.cs" />
