--- a/RPDGenerator.csproj
+++ b/RPDGenerator.csproj
@@ -82,12 +82,10 @@
   <ItemGroup>
     <Compile Include="Data\Discipline.cs" />
     <Compile Include="Data\DocAttributes.cs" />
-    <Compile Include="Data\EducationLevelFactory.cs" />
-    <Compile Include="Data\EducationTypeFactory.cs" />
-    <Compile Include="Data\ProfileFactory.cs" />
-    <Compile Include="ExcelReader\ExcelReader.cs" />
+    <Compile Include="Data\Formatter.cs" />
+    <Compile Include="Interops\ExcelReader.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="WordGenerator\WordGenerator.cs" />
+    <Compile Include="Interops\WordGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
   <ProjectExtensions>
