--- a/RPDGenerator.csproj
+++ b/RPDGenerator.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Data\DocAttributes.cs" />
     <Compile Include="Data\Formatter.cs" />
     <Compile Include="Interops\ExcelReader.cs" />
+    <Compile Include="Interops\WordProcess.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Interops\WordGenerator.cs" />
   </ItemGroup>
