--- a/RPDGenerator.csproj
+++ b/RPDGenerator.csproj
@@ -83,7 +83,9 @@
     <Compile Include="Data\Discipline.cs" />
     <Compile Include="Data\DocAttributes.cs" />
     <Compile Include="Data\Formatter.cs" />
+    <Compile Include="Data\Person.cs" />
     <Compile Include="Data\SemesterInfo.cs" />
+    <Compile Include="Data\WorkInfo.cs" />
     <Compile Include="Interops\ExcelReader.cs" />
     <Compile Include="Interops\WordProcess.cs" />
     <Compile Include="Program.cs" />
